<resources>
  <string name="app_name">ReviewNatin</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">cover</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">automatic</string>
</resources>